[gd_scene load_steps=14 format=2]

[ext_resource path="res://SCENES/BACKGROUND/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://SCENES/FX/Beam_Down.tscn" type="PackedScene" id=2]
[ext_resource path="res://SCRIPTS/TMP/PAPA_PLAYER_DASH.gd" type="Script" id=3]
[ext_resource path="res://ASSETS/SOUND/FX/TALENTS/Dash.wav" type="AudioStream" id=4]
[ext_resource path="res://SHADERS/Outline.shader" type="Shader" id=5]
[ext_resource path="res://SCRIPTS/TMP/CAMERA.gd" type="Script" id=6]
[ext_resource path="res://ASSETS/SOUND/FX/AMBIANCE/Kindergarten.wav" type="AudioStream" id=7]
[ext_resource path="res://SCRIPTS/TMP/Trail.gd" type="Script" id=8]
[ext_resource path="res://ASSETS/GRAPHICS/TMP/Alien.png" type="Texture" id=10]
[ext_resource path="res://ASSETS/SOUND/MUSIC/INGAME.wav" type="AudioStream" id=17]

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.99994
height = 28.0001

[sub_resource type="Gradient" id=3]
interpolation_mode = 2
offsets = PoolRealArray( 0.0052356, 0.329843, 0.842932, 1 )
colors = PoolColorArray( 0.960784, 0.976471, 1, 0, 0.960784, 0.976471, 1, 1, 0.994561, 0.996737, 1, 1, 0.960784, 0.976471, 1, 0 )

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/ready = null
shader_param/cooldown = Color( 0, 0, 0, 1 )

[node name="SceneTEST" type="Node2D"]
__meta__ = {
"_edit_lock_": true
}

[node name="BG_AMBIANCE" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -15.0
autoplay = true
bus = "AMBIANCE"

[node name="MUSIC" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
autoplay = true
bus = "MUSIC"

[node name="Background" parent="." instance=ExtResource( 1 )]
__meta__ = {
"_edit_lock_": true
}

[node name="PAPA_PLAYER" type="KinematicBody2D" parent="."]
position = Vector2( 720, 405 )
collision_layer = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Alien_Collider" type="CollisionShape2D" parent="PAPA_PLAYER"]
light_mask = 2
position = Vector2( 0, 8 )
rotation = 1.5708
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="PLAYER" type="Node2D" parent="PAPA_PLAYER"]
position = Vector2( 0, -15 )
__meta__ = {
"_edit_lock_": true
}

[node name="Intro Alien" parent="PAPA_PLAYER/PLAYER" instance=ExtResource( 2 )]

[node name="Shadow" type="Polygon2D" parent="PAPA_PLAYER/PLAYER"]
visible = false
position = Vector2( -7.22192, -9.71426 )
scale = Vector2( 1.11855, 0.857143 )
color = Color( 0, 0.1, 0, 0.392157 )
polygon = PoolVector2Array( -14.9999, 44.056, -13.1739, 40.92, -10.0588, 38.5556, -1.82355, 37.0001, 6.41174, 37, 13.8235, 37.0001, 21.6548, 38.1666, 26.1249, 40.5, 27.913, 44, 26.1249, 46.3333, 20.4117, 49.4445, 13, 51, 5.08691, 51, -1.82355, 51, -10.0588, 49.4445, -13.1739, 47.192 )
__meta__ = {
"_edit_lock_": true
}

[node name="Dash_Trail" type="Line2D" parent="PAPA_PLAYER/PLAYER"]
visible = false
width = 36.0
default_color = Color( 0.960784, 0.976471, 1, 1 )
gradient = SubResource( 3 )
script = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Dash_Timer" type="Timer" parent="PAPA_PLAYER/PLAYER/Dash_Trail"]
wait_time = 0.2
one_shot = true

[node name="Cooldown_Timer" type="Timer" parent="PAPA_PLAYER/PLAYER/Dash_Trail"]
wait_time = 4.0
one_shot = true

[node name="The Alien (with OUTLINE shader)" type="Sprite" parent="PAPA_PLAYER/PLAYER"]
visible = false
material = SubResource( 1 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_lock_": true
}

[node name="FX" type="AudioStreamPlayer" parent="PAPA_PLAYER/PLAYER"]
stream = ExtResource( 4 )
bus = "FX"

[node name="CAMERA" type="Camera2D" parent="."]
position = Vector2( 720, 405 )
current = true
limit_left = 0
limit_top = 0
limit_right = 1440
limit_bottom = 810
limit_smoothed = true
smoothing_enabled = true
smoothing_speed = 10.0
script = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="timeout" from="PAPA_PLAYER/PLAYER/Dash_Trail/Dash_Timer" to="PAPA_PLAYER" method="_on_Dash_Timer_timeout"]
[connection signal="timeout" from="PAPA_PLAYER/PLAYER/Dash_Trail/Cooldown_Timer" to="PAPA_PLAYER" method="_on_Cooldown_Timer_timeout"]
